Add: signup and logout functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,10 @@
         <input class="custom-input" type="number" placeholder="age" name="age" />
         <input class="px-4 py-2 rounded-md bg-blue-500" type="submit" value="Create user" />
       </form>
+
+      <!-- <a href="/logout"
+      class="inline-block mt-10 px-4 py-2 rounded-md bg-blue-500">Logout user</a> -->
     </div>
   </body>
 </html>
+ 
